hw42 completed again

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password = chocolatefrog
 spring.jpa.hibernate.ddl-auto=update
 
 homeworks4.avatars.folder=avatars
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
