--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.jpa.hibernate.ddl-auto=update
 homeworks4.avatars.folder=avatars
 
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
+logging.level.root=info
+
+server.port=8080
+
